--- a/libBase.gradle
+++ b/libBase.gradle
@@ -89,10 +89,19 @@ android {
 
     kotlinOptions { jvmTarget = JavaVersion.VERSION_1_8 }
 
+    def aarFolder = new File(project.rootDir.absolutePath + "/.aar")
+    aarFolder.mkdirs()
+
     /*aar路径修改, 文件名修改*/
     libraryVariants.all { variant ->
         if (variant.buildType.name != "debug") {
-            variant.getPackageLibraryProvider().get().destinationDir = new File(project.rootDir.absolutePath + "/.aar")
+            if (gradle.gradleVersion.startsWith("6")) {
+                variant.getPackageLibraryProvider().get().destinationDir = aarFolder
+            } else if (gradle.gradleVersion.startsWith("5")) {
+                variant.packageLibrary.destinationDirectory.set(aarFolder)
+            } else {
+                //no op
+            }
         }
 
         variant.outputs.all { output ->
